--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   shimmer: ^2.0.0
   grouped_list: ^4.1.0
   fluttertoast: ^8.0.9
+  dot_navigation_bar: ^1.0.1+3
+  table_calendar: ^3.0.5
+  date_picker_timeline: ^1.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
