--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-
-version: 1.0.0+1
+version: 1.0.6+7
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -21,12 +20,12 @@ dependencies:
   timeago: ^3.1.0
   cached_network_image: ^3.2.0
   url_launcher: ^6.0.17
-  flutter_local_notifications: ^9.2.0
 
   #firebase
   firebase_core: ^1.7.0
   firebase_auth: ^3.0.2
   cloud_firestore: ^3.1.11
+  firebase_crashlytics: ^2.6.3
 
   #stacked
   stacked: ^2.2.7
