--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.0.9
   dot_navigation_bar: ^1.0.1+3
   date_picker_timeline: ^1.2.3
+  table_calendar: ^3.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
